syntax = "proto3";
option csharp_namespace = "GrpcExchange";
package Exchange;
service ExchangeService { 
  rpc UnaryCall (Request) returns (Reply);
  rpc StreamingFromServer (Request) returns (stream Reply);
  rpc StreamingFromClient (stream Request) returns (Reply);
  rpc StreamingBothWays (stream Request) returns (stream Reply);
}
message Request {
    string json = 1;
};
message Reply {
    string message  = 1;
}